--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lib": "lib"
   },
   "scripts": {
+    "start": "webpack",
     "test": "mocha"
   },
   "repository": {
@@ -21,9 +22,12 @@
   },
   "homepage": "https://github.com/canonchain/argon2-wasm#readme",
   "devDependencies": {
-    "assert": "^2.0.0"
+    "assert": "^2.0.0",
+    "webpack": "^4.38.0",
+    "eslint": "^6.3.0",
+    "webpack-cli": "^3.3.6"
   },
   "dependencies": {
-    "eslint": "^6.3.0"
+    "base64-loader": "^1.0.0"
   }
 }
